Block.getCollisionBoundingBox has changed signature to use IBlockAccess instead of World.  IBlockAccess is used for
   methods which are called by multithreaded access, typically chunk rendering (compiling rendering lists)
   or AI (entity decision logic)
Block.getSubBlocks signature change to use NonNullList
CreativeTabs.displayAllRelevantItems signature change to use NonNullList

Changes from 1.8.9 to 1.10.2

EntityPlayerMP.theItemInWorldManager -> EntityPlayerMP.interactionManager
BlockRenderLayer -> BlockRenderLayer
GameRegistry.findItem -> Item.REGISTRY.getObject(new ResourceLocation(...))
Material.rock etc have new names
CreativeTabs.blocks etc have new names

For better or for worse, they have changed the registration methods for blocks and items; ItemBlocks also require
  explicit registration of the Item (previously, Forge did it automatically).

BlockRenderLayer ->  BlockRenderLayer

BlockState has become BlockStateContainer

WorldRenderer has become VertexBuffer

Vec3 has become Vec3d

AxisAlignedBB, ModelResourceLocation, and BlockPos have moved packages

MovingObjectPosition is RayTraceResult

BlockBounds are now replaced with AABB
ChangeBlockBounds based on state is all by pull, not push.  Uses final AABB.

The appearance of some items and blocks has changed because the isGui3D no longer affects the rotation, i.e.
  3D blocks previously defaulted to an isometric view, but now they are the same as the default face-on view.
  isGui3D now affects lighting only.

For some reason, not longer copied assets to the run folder:
C:\Users\TGG\IdeaProjects\MinecraftByExample1-10-2\out\production\MinecraftByExample1-10-2\assets\minecraftbyexample
See FMLClientHandler::addModAsResource()

Addition of left and right hand means the item transforms have changed.
Now have:
    "thirdperson_righthand":
    "thirdperson_lefthand":
    "firstperson_righthand":
    "firstperson_lefthand":

ISmartItemModel, ISmartBlockModel, IFlexibleBakedModel are all gone